// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<button
  class="svelte-6r5o0y"
>
   
  <span>
    Default
  </span>
   
</button>
`;

exports[`Disabled 1`] = `
<button
  class="svelte-6r5o0y"
  disabled=""
>
   
  <span>
    Disabled
  </span>
   
</button>
`;

exports[`Icon only 1`] = `
<button
  class="iconOnly svelte-6r5o0y"
>
  <i
    class="material-icons svelte-6r5o0y"
  >
    face
  </i>
   
   
</button>
`;

exports[`Icon only, no color 1`] = `
<button
  class="iconOnly noColor svelte-6r5o0y"
>
  <i
    class="material-icons svelte-6r5o0y"
  >
    face
  </i>
   
   
</button>
`;

exports[`No color 1`] = `
<button
  class="noColor svelte-6r5o0y"
>
   
  <span>
    Text only
  </span>
   
</button>
`;

exports[`Primary 1`] = `
<button
  class="primary svelte-6r5o0y"
>
   
  <span>
    Primary
  </span>
   
</button>
`;

exports[`Primary disabled 1`] = `
<button
  class="primary svelte-6r5o0y"
  disabled=""
>
   
  <span>
    Primary
  </span>
   
</button>
`;

exports[`Primary with icon only 1`] = `
<button
  class="primary iconOnly svelte-6r5o0y"
>
  <i
    class="material-icons svelte-6r5o0y"
  >
    volume_up
  </i>
   
   
</button>
`;

exports[`Primary with icon only, no color 1`] = `
<button
  class="primary iconOnly noColor svelte-6r5o0y"
>
  <i
    class="material-icons svelte-6r5o0y"
  >
    volume_up
  </i>
   
   
</button>
`;

exports[`Primary with text and icon 1`] = `
<button
  class="primary svelte-6r5o0y"
>
  <i
    class="material-icons svelte-6r5o0y"
  >
    person
  </i>
   
  <span>
    Hey!
  </span>
   
</button>
`;

exports[`Text and icon 1`] = `
<button
  class="svelte-6r5o0y"
>
  <i
    class="material-icons svelte-6r5o0y"
  >
    face
  </i>
   
  <span>
    Hello
  </span>
   
</button>
`;
